--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -69,10 +69,12 @@ li ul li a {
 	width: auto;
 	min-width: 140px;
 	padding: 0 20px;
+    
 }
 
 
 ul li a:hover + .hidden, .hidden:hover {
+    max-width: 100vw;
 	display: block;
 }
 
@@ -83,6 +85,7 @@ ul li a:hover + .hidden, .hidden:hover {
     font-size: 1.7em;
 	text-decoration: none;
 	color: $white;
+    max-width: 100vw;
     height: 100%;
 	background: $orange;
 	text-align: center;
