--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -1,14 +1,12 @@
-
-
-ul {
-	list-style-type: none;
-	margin:0;
-	padding:0;
+#menu {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
     right: 0;
-	position: absolute;
-    // float: right;
-    
+    position: absolute;
 }
+
+
 
 // DESKTOP
 
